<resources>
    <string name="app_name">InstagramLogin</string>
    <string name="email_address">Phone number, email or username</string>
    <string name="password">Password</string>
    <string name="login_now">Log in</string>
    <string name="don_t_remember_password">Forgot your login details? Get help signing in.</string>
    <string name="dont_have_an_account">Don\'t have an account? Sign up.</string>
    <string name="sign_in_with_facebook">Log in with Facebook</string>
    <string name="or"> OR  </string>
    <string name="logo">logo</string>
    <string name="instagram">Instagram from Facebook</string>
</resources>